# underwater-auv-simulation1

./: .gitignore  FAULT_INJECTOR_README.md  FAULT_TYPES_TABLE.md  FORMULA_INFERENCE_GUIDE.md  IMU_TEST_QUICK.md  INS_GUIDE.md  README.md  SENSOR_FAULT_TEST_GUIDE.md  SENSOR_TEST_GUIDE.md  UUV控制模型完整指南.md  build_10thrusters.sh  calculate_tam.py  calculate_tam_10thrusters.py  calculate_water_density.py  change_fluid_density.py  check_10thrusters.sh  check_buoyancy.py  check_imu_clean.sh  check_imu_quick.sh  check_imu_simple.sh  check_sensors_quick.sh  cmd_vel_to_wrench_simple.py  collision_simulator.py  compare_gt_ins.py  diagnose_instability.py  fault_injector_complete.py  go_to_target.py  imu_monitor.py  interactive_fault_injector_enhanced.py  interactive_fault_injector_fixed.py  missile_final.urdf  ppt_content.md  real_physics_fault_injector.py  save_camera_image.py  set_density.sh  simple_ins_node.py  sound_speed_calculator.py  start_all.sh  start_complete_demo.sh  start_fault_injector.sh  (+38 more)
.claude/: settings.local.json
docs/: 推进器配置修改指南.md  故障注入实现原理详解.md  (+2 more)
src/underwater_bubble_sim/: package.xml  setup.cfg  setup.py
src/underwater_bubble_sim/config/: bubble_params.yaml
src/underwater_bubble_sim/launch/: ocean_bubbles.launch.py
src/underwater_bubble_sim/scripts/: bubble_dynamics.py  bubble_generator.py  bubble_image_processor.py
src/uuv_fault_injection/: README.md  package.xml  setup.cfg  setup.py
src/uuv_fault_injection/config/: fault_scenarios.yaml
src/uuv_fault_injection/launch/: fault_injection.launch.py
src/uuv_fault_injection/resource/: uuv_fault_injection
src/uuv_fault_injection/uuv_fault_injection/: __init__.py
src/uuv_fault_injection/uuv_fault_injection/scripts/: fault_injector.py  fault_monitor.py
(+65 files in other folders)
