<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>underwater_bubble_sim</name>
  <version>0.1.0</version>
  <description>Underwater bubble simulation for Gazebo UUV Simulator.
    Simulates bubble effects on vision, optics, and vehicle dynamics.</description>
  <maintainer email="user@example.com">wei1367</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
